community-docs/v0.16/modules/ROOT/pages/how-tos-for-users/oci-storage.adoc
= OCI Storage
:revdate: 2025-07-23
:page-revdate: {revdate}
:page-aliases: /oci-storage

{product_name} stores Kubernetes bundle resources in etcd by default. However, etcd has strict size limits and is not optimized for large workloads. If your bundle resources exceed the etcd size limits in the target cluster, consider using an OCI registry as the storage backend.

[NOTE]
====
To reduce bundle size, compress and base64-encode bundle content before uploading to the OCI registry.
====

Using an OCI registry helps you:

* Reduce etcd load by offloading large bundle content.
* Use a standardized storage backend for large manifests or Helm charts.

image::fleet-ociStorage-flow.png[A visual asset displaying the flow of {product_name} with OCI Storage.]

[NOTE]
====
{product_name} checks for the integrity of OCI artifacts and tags OCI artifacts as `latest`.
====

[#_prerequisites]
== Prerequisites

* A running OCI registry.
* A Kubernetes secret with valid credentials.
* A {product_name} installation (v2.12.0 or later).

[#_how_to_enable_oci_storage]
== How to enable OCI storage

To enable OCI storage, create a secret that includes the necessary information and access options for the OCI registry. There are two ways of defining secrets:

* *Global secret:* A secret exactly named `ocistorage` in the same namespace as your `GitRepo`s.
** This is the fallback secret. If no `GitRepo`-level secret is specified, {product_name} uses this secret for all `GitRepo`s in the namespace.
* *GitRepo-level secret:* A custom secret for specific `GitRepo` resources.
** This is a user-defined secret that can have any name and must be referenced in the `GitRepo` resource.
** Set the `ociRegistrySecret` field in the `GitRepo` spec to the secret’s name.

[NOTE]
====
{product_name} does not fall back to etcd if the secret is missing or invalid. Instead, it logs an error and skips the deployment.
====

Create a Kubernetes Secret that contains the registry address and optional credentials:

[source,yaml]
----
apiVersion: v1
kind: Secret
metadata:
  name: ocistorage
  namespace: fleet-local
type: fleet.cattle.io/bundle-oci-storage/v1alpha1
data:
  reference: <base64-encoded-registry-url> # Only the reference field is required. All other fields are optional.
  username: <base64-encoded-user>
  password: <base64-encoded-password>
  insecureSkipTLS: <base64-encoded-true/false>
  basicHTTP: <base64-encoded-true/false>
  agentUsername: <base64-encoded-readonly-user>
  agentPassword: <base64-encoded-password>
  cacerts: <base64-encoded-pem-ca-bundle>
----

[NOTE]
====
The secret must have the type: `fleet.cattle.io/bundle-oci-storage/v1alpha1`. {product_name} requires this value and rejects any secret with a different type.
====

Changing the secret does not trigger a redeployment. {product_name} uses the new registry only after a Git update or a manual force update.

[#_secret_field_reference]
=== Secret Field Reference

The fields you can configure are:

[cols="1,3,1,3",options="header"]
|===
| Field | Description | Format | Notes

| `reference`       | URL of the OCI registry.                    | Base64-encoded string       | Do not use `oci://` or similar prefixes.
| `username`        | Username with write access to the registry. | Base64-encoded string       | If not specified, {product_name} accesses the registry without authentication.
| `password`        | Password for the write-access user.         | Base64-encoded string       | If not specified, {product_name} accesses the registry without authentication.
| `agentUsername`   | Read-only username for agents.              | Base64-encoded string       | Use read-only credentials for agents to enhance security. If you don’t set these credentials, the agent uses username.
| `agentPassword`   | Read-only password for agents.              | Base64-encoded string       | Use read-only credentials for agents to enhance security. If you don’t set these credentials, the agent uses user password.
| `insecureSkipTLS` | Skips TLS certificate validation.           | Base64-encoded `true/false` | Use only for development or testing. By default, `insecureSkipTLS` is set to `false`.
| `basicHTTP`       | Enables HTTP instead of HTTPS.              | Base64-encoded `true/false` | Not recommended. Allows insecure traffic. By default, `basicHTTP` is set to `false`.
| `cacerts`         | PEM-encoded CA bundle for registries using custom or private Certificate Authorities. | Base64-encoded PEM data | When set, {product_name} merges these certificates with the system root CA pool for TLS validation against the OCI registry.
|===

[#_productname_example]
== {product_name} Example

Consider the following `GitRepo` file:

[source,yaml]
----
apiVersion: fleet.cattle.io/v1alpha1
kind: GitRepo
metadata:
  name: frontend-oci
  namespace: fleet-local
spec:
  repo: https://github.com/your-org/fleet-oci-example.git
  branch: main
  paths:
    - ./frontend
  ociRegistrySecret: ocistorage
----

You can either create and apply a YAML file that contains the registry address and optional credentials similar to the example above. Then run:

[source,bash]
----
kubectl apply -f secrets/oci-secret.yaml
----

Or you can use `kubectl` to create the secret using unencoded text. Kubernetes will convert the values to base64 automatically.

[source,bash]
----
kubectl -n fleet-local create secret generic ocistorage \
  --type=fleet.cattle.io/bundle-oci-storage/v1alpha1 \
  --from-literal=username=fleet-ci \
  --from-literal=password=fleetRocks \
  --from-literal=reference=192.168.1.39:8082 \
  --from-literal=insecureSkipTLS=true \
  --from-literal=basicHTTP=false \
  --from-literal=agentUsername=fleet-ci-readonly \
  --from-literal=agentPassword=readonlypass \
  --from-file=cacerts=/path/to/ca-bundle.pem
----

To validate your secret, run:

[source,bash]
----
kubectl get secret ocistorage -n fleet-local -o yaml
----

To decrypt and view your secret:

[source,bash]
----
kubectl get secret ocistorage -n fleet-local -o json | jq '.data | map_values(@base64d)'
----

image::ociStorage-secret-ss.png[A screenshot of OCI secrets enabled for {product_name}]
